--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
   easy_localization: ^3.0.7
+  provider: ^6.1.2
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
